grace.interpreter/src/test/resources/8_aliassing/exclude03.grace
class A {
  method f { 5; };
};

class B {
  inherit A;
};

object {
  inherit B exclude f;
  print(g); // error
};